--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <article id ="jContainer"></article>
 
-    <script src="./scripts/journal.js"></script>
+<script src="./scripts/journal.js"></script>
 </body>
 </html>
